Fjernet Aareg V2, går isteden direkte fra Arbeidsforhold Service