@@ -9,7 +9,6 @@ import no.nav.registre.aareg.consumer.ws.request.RsAaregOpprettRequest;
 import no.nav.registre.aareg.domain.RsAktoerPerson;
 import no.nav.registre.aareg.domain.RsArbeidsavtale;
 import no.nav.registre.aareg.domain.RsArbeidsforhold;
-import no.nav.registre.aareg.domain.RsFartoy;
 import no.nav.registre.aareg.domain.RsOrganisasjon;
 import no.nav.registre.aareg.domain.RsPeriode;
 import no.nav.registre.aareg.domain.RsPersonAareg;
@@ -88,39 +87,37 @@ public class AaregService {
     private void mapArbeidsforhold(String navCallId, Map<String, String> resultMap, String environment, ResponseEntity<List<Arbeidsforhold>> arbeidsforholdResponse) {
         if (arbeidsforholdResponse != null && arbeidsforholdResponse.getBody() != null) {
             var responseBody = arbeidsforholdResponse.getBody();
-            responseBody.forEach(map -> Collections.singletonList(map).forEach(
-                    forhold -> {
-                        var arbeidsforhold = RsArbeidsforhold.builder()
-                                .arbeidsforholdIDnav(forhold.getNavArbeidsforholdId())
-                                .arbeidsforholdID(forhold.getArbeidsforholdId())
-                                .arbeidsgiver("Person".equals(forhold.getArbeidsgiver().getType()) ?
-                                        RsAktoerPerson.builder()
-                                                .ident(((Person) (forhold.getArbeidsgiver())).getOffentligIdent())
-                                                .build() :
-                                        RsOrganisasjon.builder()
-                                                .orgnummer(((Organisasjon) (forhold.getArbeidsgiver())).getOrganisasjonsnummer())
-                                                .build())
-                                .arbeidsforholdstype(forhold.getType())
-                                .arbeidstaker(RsPersonAareg.builder()
-                                        .ident(forhold.getArbeidstaker().getOffentligIdent())
-                                        .build())
-                                .ansettelsesPeriode(RsPeriode.builder()
-                                        .fom(getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getFom()))
-                                        .fom(getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getTom()))
-                                        .build())
-                                .arbeidsavtale(RsArbeidsavtale.builder()
-                                        .yrke(forhold.getArbeidsavtaler().get(0).getYrke())
-                                        .stillingsprosent(0.0)
-                                        .endringsdatoStillingsprosent(
-                                                getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getFom()))
-                                        .build())
-                                .fartoy(List.of(RsFartoy.builder()
-                                        .build()))
-                                .build();
-                        resultMap.putAll(aaregWsConsumer.oppdaterArbeidsforhold(buildRequest(arbeidsforhold, environment, navCallId)));
-                    }
-            ));
-        }
+                responseBody.forEach(map -> Collections.singletonList(map).forEach(
+                        forhold -> {
+                            var arbeidsforhold = RsArbeidsforhold.builder()
+                                    .arbeidsforholdIDnav(forhold.getNavArbeidsforholdId())
+                                    .arbeidsforholdID(forhold.getArbeidsforholdId())
+                                    .arbeidsgiver("Person".equals(forhold.getArbeidsgiver().getType()) ?
+                                            RsAktoerPerson.builder()
+                                                    .ident(((Person) (forhold.getArbeidsgiver())).getOffentligIdent())
+                                                    .build() :
+                                            RsOrganisasjon.builder()
+                                                    .orgnummer(((Organisasjon) (forhold.getArbeidsgiver())).getOrganisasjonsnummer())
+                                                    .build())
+                                    .arbeidsforholdstype(forhold.getType())
+                                    .arbeidstaker(RsPersonAareg.builder()
+                                            .ident(forhold.getArbeidstaker().getOffentligIdent())
+                                            .build())
+                                    .ansettelsesPeriode(RsPeriode.builder()
+                                            .fom(getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getFom()))
+                                            .fom(getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getTom()))
+                                            .build())
+                                    .arbeidsavtale(RsArbeidsavtale.builder()
+                                            .yrke(forhold.getArbeidsavtaler().get(0).getYrke())
+                                            .stillingsprosent(0.0)
+                                            .endringsdatoStillingsprosent(
+                                                    getLocalDateTimeFromLocalDate(forhold.getAnsettelsesperiode().getPeriode().getFom()))
+                                            .build())
+                                    .build();
+                            resultMap.putAll(aaregWsConsumer.oppdaterArbeidsforhold(buildRequest(arbeidsforhold, environment, navCallId)));
+                        }
+                ));
+            }
     }
 
     private static RsAaregOppdaterRequest buildRequest(
